--- a/css/basic.css
+++ b/css/basic.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap');
 
-body { font-family:'Noto Sans KR', Dodum, Verdana, Tahoma, sans-serif; font-size:12px; }
+body { font-family:'Noto Sans KR', Dodum, Verdana, Tahoma, sans-serif; font-size:12px; } 
 a { color:#111; }
 
 .mobile { display:none; }
@@ -11,11 +11,11 @@ img { max-width:100%; }
 
 /* header */
 header { position:absolute; top:0; left:0; width:100%; height:4.2vw; min-height:80px; border-bottom:1px solid #d8d8d8; z-index:50; }
-.header_in { max-width:1920px; margin:auto; height:100%; border:2px solid red; }
-header h1 { display:flex; margin-left:5vw;align-items:center; width:172px; height:100%; border:2px solid blue; }
+.header_in { max-width:1920px; margin:auto; height:100%; }
+header h1 { display:flex; margin-left:5vw;align-items:center; width:172px; height:100%; }
 header h1 a { display:inline-block; width:172px; height:100%; background:url('../img/toplogo_w.png') no-repeat center center / contain ; text-indent:-9999px; }
 
-.gbn_wrap { position:absolute; height:100%; top:0; left:0; width:100%; display:flex; justify-content: flex-end; height:100%; border:2px solid orange; }
+.gbn_wrap { position:absolute; height:100%; top:0; left:0; width:100%; display:flex; justify-content: flex-end; height:100%; }
 
 .gnb_list_w {height:100%; }
 .gnb_list { display:table; height:100%; padding-right:2vw; }
@@ -57,8 +57,8 @@ a.btn_total { display:flex; align-items:center; height:100%; width:100%;backgrou
 .total_menu_z h1 { display:none; }
 .total_menu_z h1 a {}
 
-.total_menu { width:100%; height:100%; border:2px solid red; }
-ul.total_list { display:table; position:absolute; top:0; left:20%; width:60%; height:100%; border:5px solid yellow; }
+.total_menu { width:100%; height:100%; }
+ul.total_list { display:table; position:absolute; top:0; left:20%; width:60%; height:100%; }
 .total_list > li { display:table-cell; position:absolute; top:35%; }
 a.totalMitem { font-size:2vw; font-weight:500; color:#fff; border-bottom:2px solid transparent; transition:0.4s; }
 .totalMitem:hover { border-bottom:2px solid #fff; }
@@ -74,7 +74,7 @@ ul.totalSubItem_list {}
 a.totalSubItem { font-size:1.1vw; color:#86a1a8; font-weight:500;letter-spacing:-1px; }
 .totalSubItem:hover { color:#65d8f8; }
 
-.totalAddress_w { position:absolute; bottom:10%; left:20%; width:60%; border:2px solid coral; color:#86a1a8 }
+.totalAddress_w { position:absolute; bottom:10%; left:20%; width:60%; color:#86a1a8 }
 .totalAddress_w h2 { font-size:0.8vw; margin-bottom:20px; }
 .totalAddress_list { display:table; }
 .totalAddress_list > li { display:table-cell; font-size:0.67vw; padding-right:70px; line-height:2; font-weight:300;}
@@ -95,8 +95,8 @@ a.btn_totalClose:after { transform:rotate(-45deg);}
 
 
 /**************  #fullpage **************/
-#fullpage {}
-
+#fullpage { overflow-x: hidden; }
+    /* overflow-x: hidden; 아래 스크롤 생기는거 없애기  */
 #s1 { position:relative; }
 .video_w {}
 .video_w video { 
@@ -114,10 +114,13 @@ a.btn_totalClose:after { transform:rotate(-45deg);}
     object-fit: cover; /*cover video background */
     z-index:3; }
 
-.s1_w { position:relative; border:2px solid red; z-index:5; color:#fff; padding: 50px 0 0 12vw; }
-.s1_main { font-size:3.8vw; font-weight:700; font-family:'Merriweather', serif; line-height:1.25; letter-spacing:-1.8px; }
+.s1_w { position:relative; z-index:5; color:#fff; padding: 50px 0 0 12vw; }
+.s1_main { font-size:3.8vw; font-weight:700; font-family:'Merriweather', serif; line-height:1.25; letter-spacing:-1.8px; transform:translateX(250px); opacity:0; transition-duration:1.5s; }
 .s1_w span { display:block; font-size:4.8vw; }
-.s1_sub { font-size:1.5vw; margin-top:15px; }
+.s1_sub { font-size:1.5vw; margin-top:15px; transform:translateX(150px); opacity:0; transition-duration:1.1s; transition-delay:1s; }
+
+#s1.active .s1_main { transform:translateX(0); opacity:1;}
+#s1.active .s1_sub { transform:translateX(0); opacity:1;}
 
 .s1_sns { position:absolute; bottom:50px; left:6vw; z-index:5; }
 .s1_sns ul { }
@@ -130,24 +133,29 @@ a.btn_totalClose:after { transform:rotate(-45deg);}
 
 
 
-#s2 { position:relative; background:#EBE7E4; min-height:475px; }
+#s2 { position:relative; background:#EBE7E4; min-height:475px; overflow: hidden;}
 .s2_bg { position:absolute; top:0; right:0; bottom:0; width:30%; background:#95aaa3; }
-.s2_img { position:absolute; top:0; right:20%; height:100%; width:25%; display:flex; align-items:center; }
+.s2_img { position:absolute; top:0; right:20%; height:100%; width:25%; display:flex; align-items:center; transform:scale(0.5); opacity:0; transition-duration:1.3s; transition-delay:0.8s;}
+#s2.active .s2_img { transform:scale(1); opacity:1; }
 
-.s2_w { position:relative; margin:100px 12vw;  z-index:5;
-    border:2px solid Black }
-.s2_in { width:100%; border:2px solid red }
+.s2_w { position:relative; margin:100px 12vw; z-index:5; }
+.s2_in { width:100%; }
 
 .s2_title_w {}
-    .s2_title { max-width:45%; }
-    .s2_title_sub { font-size:1.7vw; color:#3c4940; font-weight:700; margin-top:26px;}
+    .s2_title { max-width:45%; transform:translateX(200px); opacity:0; transition-duration:1s; }
+    .s2_title_sub { font-size:1.7vw; color:#3c4940; font-weight:700; margin-top:26px; transform:translateX(150px); opacity:0; transition-duration:1s; transition-delay:0.3s;  }
 
-.s2_cont { margin-top:70px; }
+#s2.active .s2_title { transform:translateX(0); opacity:1; }
+#s2.active .s2_title_sub { transform:translateX(0); opacity:1;}
+
+.s2_cont { margin-top:70px; transform:translateY(150px); opacity:0; transition-duration:1s; transition-delay:0.6s; }
+.s2_cont:last-child { transition-delay:0.5s; }
     .s2_item_title { font-size:1vw; color:#3c4940; font-weight:700; }
     .s2_item_cont { font-size:0.85vw; margin-top:40px; }
 
     .s2_list { display:table; text-align:left; }
     .s2_list > li { display:table-cell; padding-right:70px; vertical-align:top;}
+#s2.active .s2_cont { transform:translateX(0); opacity:1; }
 
     .s2_item { text-align:center; }
     .s2_item:before { display:block; content:''; width:90px; height:90px; background:url('../img/mc_eff_m.png') no-repeat 0 0 / cover;   }
@@ -159,7 +167,7 @@ a.btn_totalClose:after { transform:rotate(-45deg);}
     .s2_item04:before { background-position:0 -270px; }
 
     .s2_more { padding-top:50px; }
-    .s2_more a { position:relative; display:inline-block; height:54px; line-height:54px; padding-right:67px; font-size:14px;  font-family:'Merriweather', serif; color:#3c4940; border:1px solid black; }
+    .s2_more a { position:relative; display:inline-block; height:54px; line-height:54px; padding-right:67px; font-size:14px;  font-family:'Merriweather', serif; color:#3c4940; }
     .s2_more a:after { position:absolute; content:""; top:0; right:0; height:54px; width:54px; background:#D5D5D5 url('../img/linkgo_allow.png') no-repeat 50% 50%; border-radius:50%; }
 
 
@@ -168,16 +176,23 @@ a.btn_totalClose:after { transform:rotate(-45deg);}
 #s3 { position:relative; background:url('../img/mc_geda_bg_pc.png') no-repeat 50% 50% / cover; z-index:3; }
 
 .s3_w { margin:100px 12vw; color:#fff; }
-.s3_title { font-size:1.7vw; font-weight:700; } 
-.s3_main { font-size:4.8vw; font-weight:700;  font-family:'Merriweather', serif; line-height:1.25; letter-spacing:-1.8px; margin-top: 30px;}
+.s3_title { font-size:1.7vw; font-weight:700; transform:translateX(150px); opacity:0; transition-duration:1s; } 
+.s3_main { font-size:4.8vw; font-weight:700;  font-family:'Merriweather', serif; line-height:1.25; letter-spacing:-1.8px; margin-top: 30px; transform:translateX(250px); opacity:0; transition-duration:1.5s; transition-delay:0.6s; }
 
-.s3_sub_w {}
+#s3.active .s3_title { transform:translateX(0); opacity:1; }
+#s3.active .s3_main { transform:translateX(0); opacity:1; }
+
+.s3_sub_w { transform:translateY(100px); opacity:0; transition-duration:1s; transition-delay:0.8s; }
 .s3_sub { margin-top:40px; }
 .s3_item_cont { font-size:0.95vw; }
 .s3_item_cont.type2 {}
 .s3_item_title { font-size:1.3vw;font-family:'Merriweather', serif; margin-bottom: 10px; }
 
-.s3_btn_w { margin-top:100px; }
+.s3_btn_w { margin-top:100px; transform:translateY(100px); opacity:0; transition-duration:1s; transition-delay:1.3s; }
+
+#s3.active .s3_sub_w { transform:translateY(0); opacity:1;}
+#s3.active .s3_btn_w { transform:translateY(0); opacity:1;}
+
 a.s3_btn { display:inline-block; margin-right:10px; padding:13px 23px; border:1px solid #fff; border-radius:100px;  }
 .s3_btn span { position:relative; display:block; font-size:0.84vw; color:#fff; padding-right:70px; }
 
@@ -186,7 +201,19 @@ a.s3_btn { display:inline-block; margin-right:10px; padding:13px 23px; border:1p
 .s3_btn span:after { width:8px; height:8px; border:1px solid #fff; border-bottom:0; border-left:0; transform:rotate(45deg) translateY(calc(-50% - 1px)); right:4px; }
 
 
+#s5 { background:#65d8f8}
+.s4_w, .s5_w { margin:100px 12vw;  }
+.s4_title, .s5_title { font-size:1.7vw; font-weight:700; margin-bottom:30px; }
 
+.arrow { position:fixed; bottom:50px; right:50px; z-index:20; }
+.prevA, .nextA { display: block; font-size:14px; font-family:'Merriweather', serif; color:#dbdbdb; }
+
+.prevA { transform:rotate(90deg); }
+.nextA { transform:rotate(-90deg) translateY(30px);}
+
+.prevA::before, .nextA::before { display:inline-block; content:""; width:8px; height:8px; border-top:1px solid #fff; border-left:1px solid #dbdbdb; transform:rotate(-45deg); margin-right:5px; }
+.prevA::before { }
+.nextA::before { }
 
 
 
